transform and model_train added

--- a/notebooks/model_train.ipynb
+++ b/notebooks/model_train.ipynb
@@ -22,7 +22,7 @@
     "## Questions\n",
     "Is this a classification or regression task?  \n",
     "\n",
-    "Answer here"
+    "This is a classification task because we were asked to predict if a transaction is fraudulent or not."
    ]
   },
   {
@@ -32,7 +32,7 @@
    "source": [
     "Are you predicting for multiple classes or binary classes?  \n",
     "\n",
-    "Answer here"
+    "Since there is only two possible outcomes (isFraud = 1 or isFraud= 0) then I would say it is for binary classes"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "source": [
     "Given these observations, which 2 (or possibly 3) machine learning models will you choose?  \n",
     "\n",
-    "List your models here"
+    "Since it is classification, I would use **Logistic Regression**"
    ]
   },
   {
@@ -50,9 +50,7 @@
    "id": "9c408b67",
    "metadata": {},
    "source": [
-    "## First Model\n",
-    "\n",
-    "Using the first model that you've chosen, implement the following steps."
+    "## First Model - Logistic Regression"
    ]
   },
   {
@@ -60,9 +58,7 @@
    "id": "93fab3d0",
    "metadata": {},
    "source": [
-    "### 1) Create a train-test split\n",
-    "\n",
-    "Use your cleaned and transformed dataset to divide your features and labels into training and testing sets. Make sure you’re only using numeric or properly encoded features.  "
+    "### 1) Create a train-test split"
    ]
   },
   {
@@ -75,7 +71,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = resampled_df.drop(\"isFraud\", axis=1)\n",
+    "y = resampled_df[\"isFraud\"]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,7 +99,19 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = {\n",
+    "    \"C\": [0.01, 0.1, 1, 10],\n",
+    "    \"penalty\": [\"l2\"],\n",
+    "    \"solver\": [\"lbfgs\", \"liblinear\"]\n",
+    "}\n",
+    "\n",
+    "grid_lr = GridSearchCV(LogisticRegression(max_iter=1000), param_grid, cv=5)\n",
+    "grid_lr.fit(X_train, y_train)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,7 +119,15 @@
    "metadata": {},
    "source": [
     "### 3) Train your model\n",
-    "Select the model with best hyperparameters and generate predictions on your test set. Evaluate your models accuracy, precision, recall, and sensitivity.  "
+    "Select the model with best hyperparameters and generate predictions on your test set. Evaluate your models accuracy, precision, recall, and sensitivity.  \n",
+    "\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "best_lr = grid_lr.best_estimator_\n",
+    "y_pred_lr = best_lr.predict(X_test)\n",
+    "\n",
+    "\n",
+    "classification_report(y_test, y_pred_lr)\n"
    ]
   },
   {
@@ -117,7 +140,12 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "best_lr = grid_lr.best_estimator_\n",
+    "y_pred_lr = best_lr.predict(X_test)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,16 +160,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8bc79657",
+   "metadata": {},
+   "source": [
+    "## Second Model - Random Forest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "732baab4",
+   "id": "6535425e",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "param_grid_rf = {\n",
+    "    \"n_estimators\": [100, 200],\n",
+    "    \"max_depth\": [None, 10, 20],\n",
+    "    \"min_samples_split\": [2, 5],\n",
+    "    \"min_samples_leaf\": [1, 2]\n",
+    "}\n",
+    "\n",
+    "grid_rf = GridSearchCV(RandomForestClassifier(random_state=42), param_grid_rf, cv=3, scoring=\"recall\")\n",
+    "grid_rf.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a596036d",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "best_rf = grid_rf.best_estimator_\n",
+    "y_pred_rf = best_rf.predict(X_test)\n",
+    "\n",
+    "\n",
+    "classification_report(y_test, y_pred_rf)"
+   ]
   },
   {
    "cell_type": "markdown",
